Updated Icon And Released the project

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Exports/Bello/BelloV2/BelloV2.x86_64"
+export_path="../Exports/FinalBello/Linux/Bello.x86_64"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -20,7 +20,7 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 custom_template/release=""
 custom_template/debug=""
 
@@ -33,7 +33,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Exports/Bello/.exe"
+export_path="../Exports/FinalBello/Windows/Bello.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -46,7 +46,7 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 custom_template/release=""
 custom_template/debug=""
 codesign/enable=false
